UtahLiveDataTest/src/objects/AmendmentRequest__c.object
<CustomObject>
    <fields>
        <fullName>PercentVarianceOverTen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If percent variance &gt; 10%, return true</description>
        <label>PercentVarianceOverTen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <defaultValue>Today()+275</defaultValue>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <defaultValue>Today() - 150</defaultValue>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PointOfContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PointsOfContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Version</label>
        <referenceTo>AmendmentRequest__c</referenceTo>
        <relationshipName>AmendmentRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorAwardedAmount__c</fullName>
        <formula>Award__r.AwardedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Awarded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>Award__r.Grant__r.Program__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <label>Current Project Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentRequests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPeriod__c</fullName>
        <formula>TEXT(MONTH(AwardedProjectPeriodStartDate__c)) + &apos;/&apos; + TEXT(DAY(AwardedProjectPeriodStartDate__c)) + &apos;/&apos; + TEXT(YEAR(AwardedProjectPeriodStartDate__c)) + &apos; To &apos; + TEXT(MONTH(AwardedProjectPeriodEndDate__c)) + &apos;/&apos; + TEXT(DAY(AwardedProjectPeriodEndDate__c)) + &apos;/&apos; + TEXT(YEAR(AwardedProjectPeriodEndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposalDescription__c</fullName>
        <label>Proposal Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProposedBudgetEndDate__c</fullName>
        <label>Proposed Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedBudgetStartDate__c</fullName>
        <formula>IF(
  NOT(ISPICKVAL(Type__c, &apos;Continuation&apos;)),
  AwardedBudgetPeriodStartDate__c,
  AwardedBudgetPeriodEndDate__c + 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedEndDate__c</fullName>
        <inlineHelpText>This date should be later than the current budget period end date.</inlineHelpText>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposedProjectEndDate__c</fullName>
        <label>Proposed Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedProjectStartDate__c</fullName>
        <formula>AwardedProjectPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rationale__c</fullName>
        <label>Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReadOnlyComments__c</fullName>
        <formula>IF( Owner:User.IsExternalUser__c, 
  OR(
    NOT(ISPICKVAL(Status__c, &apos;Initiated&apos;)),
    $User.Id != OwnerId 
  ), 
  OR(
    NOT(ISPICKVAL(Status__c, &apos;Initiated&apos;)),
    AND(
      $User.Id != ProgramManager__c,
      $User.Id != ProjectOfficer__c,
      $User.Id != GrantMonitor__c
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyPOC__c</fullName>
        <formula>OR( 
  IsSubmitted__c, 
  AND(
   $Profile.Name != &apos;Project Admin&apos;,
   $Profile.Name != &apos;Project Staff&apos;
  ),
  NOT(ISPICKVAL(Type__c, &apos;Personnel Change&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyPeriods__c</fullName>
        <formula>OR(
  OR(
    IsSubmitted__c,
    NOT(IsSent__c)
  ),
  AND(
    $Profile.Name = &apos;Project Staff&apos;,
    $Profile.Name = &apos;Project Admin&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyProject__c</fullName>
        <formula>OR( 
  IsSubmitted__c, 
  AND(
   $Profile.Name != &apos;Project Admin&apos;,
   $Profile.Name != &apos;Project Staff&apos;
  ),
  NOT(ISPICKVAL(Type__c, &apos;Project Change&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyType__c</fullName>
        <formula>OR(
  ISPICKVAL(Type__c, &apos;Continuation&apos;),
  ISPICKVAL(Type__c, &apos;Termination&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Read Only Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenderApprovalMessage__c</fullName>
        <formula>Text(Status__c) = &apos;Review in Progress&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Approval Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderSentMessage__c</fullName>
        <formula>AND(
  IsSent__c,
  NOT(IsSubmitted__c),
  $User.Id = Award__r.ProgramManager__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Sent Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderSubmittedMessage__c</fullName>
        <formula>AND(
  IsSubmitted__c,
  $User.Id = Award__r.SubAwardee__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Submitted Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type(Deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule Change</fullName>
                </value>
                <value>
                    <fullName>Budget Change</fullName>
                </value>
                <value>
                    <fullName>Personnel Change</fullName>
                </value>
                <value>
                    <fullName>Project Change</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_End_Date__c</fullName>
        <label>Request End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Start_Date__c</fullName>
        <label>Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedOnDate__c</fullName>
        <label>Requested On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Change_In_Budget__c</fullName>
        <label>Requested Change In Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Internal user who is responsible to review the amendment request. This is auto set from &quot;Assigned To&quot; field from Grant object.</inlineHelpText>
        <label>Reviewer(Deprecated)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised_Project_Goals_Milestones__c</fullName>
        <label>Revised Project Goals/Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revised_Total__c</fullName>
        <formula>Current_Budget__c + Requested_Change_In_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revised Total Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RevisionDate__c</fullName>
        <label>RevisionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RevisionHistoryAwardName__c</fullName>
        <label>RevisionHistoryAwardName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeRationale1__c</fullName>
        <label>Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScopeRationale2__c</fullName>
        <label>Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScopeofWorkChangeDescription__c</fullName>
        <description>Description for the change of scope for work</description>
        <label>If &apos;Scope/T&amp;C Change&apos;enter new Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScopeofWorkChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status of the change approval</description>
        <label>Scope of Work Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendBackComment__c</fullName>
        <label>Send Back Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendBackWithComments__c</fullName>
        <label>SendBackWithComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project/Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>Amendment Requests</relationshipLabel>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Of_Amendment_Request__c</fullName>
        <label>Source Of Amendment Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federally Mandated</fullName>
                </value>
                <value>
                    <fullName>Change In Scope/Plan</fullName>
                </value>
                <value>
                    <fullName>Internal Decision</fullName>
                </value>
                <value>
                    <fullName>Recipient Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Grantor</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted to Applicant</fullName>
                </value>
                <value>
                    <fullName>Review by Grant Monitor</fullName>
                </value>
                <value>
                    <fullName>Review by Project Officer</fullName>
                </value>
                <value>
                    <fullName>Review by Program Manager</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
                <value>
                    <fullName>Revised</fullName>
                </value>
                <value>
                    <fullName>Submitted for Internal Approval</fullName>
                </value>
                <value>
                    <fullName>Approved Internally</fullName>
                </value>
                <value>
                    <fullName>Approved by Grantor</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubAwardee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Awardee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SubAwardees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Sub-Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incurred Pre-Award Costs</fullName>
                </value>
                <value>
                    <fullName>Change of Key Personnel</fullName>
                </value>
                <value>
                    <fullName>Fixed Price Sub-Awards Issuance</fullName>
                </value>
                <value>
                    <fullName>Change in Cost Sharing</fullName>
                </value>
                <value>
                    <fullName>Program Income Adjustment</fullName>
                </value>
                <value>
                    <fullName>Revision of Project Scope and Plan</fullName>
                </value>
                <value>
                    <fullName>Revision of Spend Plan or Amounts</fullName>
                </value>
                <value>
                    <fullName>Revision of Direct Cost</fullName>
                </value>
                <value>
                    <fullName>Compensation - Personal Services</fullName>
                </value>
                <value>
                    <fullName>Compensation - Fringe Benefits</fullName>
                </value>
                <value>
                    <fullName>Adding Entertainment Cost</fullName>
                </value>
                <value>
                    <fullName>Exchange Rate Fluctuations</fullName>
                </value>
                <value>
                    <fullName>Fund Raising &amp; Investment Mgmt. Costs</fullName>
                </value>
                <value>
                    <fullName>Goods or Services for Personal Use</fullName>
                </value>
                <value>
                    <fullName>Insurance &amp; Indemnification</fullName>
                </value>
                <value>
                    <fullName>Organization Costs</fullName>
                </value>
                <value>
                    <fullName>Participant Support Costs</fullName>
                </value>
                <value>
                    <fullName>Rearrangement &amp; Re-conversion Costs</fullName>
                </value>
                <value>
                    <fullName>Selling &amp; Marketing Costs</fullName>
                </value>
                <value>
                    <fullName>Changes to Travel Costs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportingDocumentsAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supporting Documents Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalAdjustment__c</fullName>
        <label>Total Adjustment</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.Adjustment__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalApprovedBudget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TotalApprovedBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalCashMatch__c</fullName>
        <label>TotalCashMatch</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.CashMatch__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalCurrentBudget__c</fullName>
        <label>TotalCurrentBudget</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.ProjectBudgetPlusAdminCostProposed__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFederalAmountDifference__c</fullName>
        <label>TotalFederalAmountDifference</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.AwardedAmountDifference__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFederalAmount__c</fullName>
        <label>TotalFederalAmount</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.Federal__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalInkindMatch__c</fullName>
        <label>TotalInkindMatch</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.InKindMatch__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalMatchAmountDifference__c</fullName>
        <label>TotalMatchAmountDifference</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.MatchAmountDifference__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalProposedBudget__c</fullName>
        <label>TotalProposedBudget</label>
        <summarizedField>AmendmentRequestBudgetCategory__c.ProposedBudgetRevision__c</summarizedField>
        <summaryForeignKey>AmendmentRequestBudgetCategory__c.AmendmentRequest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Amendment/Modification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost-Extension</fullName>
                </value>
                <value>
                    <fullName>No Cost-Extension</fullName>
                </value>
                <value>
                    <fullName>Award Increase/Decrease</fullName>
                </value>
                <value>
                    <fullName>Budget Revision</fullName>
                </value>
                <value>
                    <fullName>Project Change</fullName>
                </value>
                <value>
                    <fullName>Personnel Change</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Grantee Amendment Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Amendment Request</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Change Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Requests</pluralLabel>
    <recordTypes>
        <fullName>BudgetRevision</fullName>
        <active>true</active>
        <label>Budget Revision</label>
    </recordTypes>
    <recordTypes>
        <fullName>FormalAmendments</fullName>
        <active>true</active>
        <label>Formal Amendments</label>
    </recordTypes>
    <recordTypes>
        <fullName>PeriodicAnnualRenewal</fullName>
        <active>true</active>
        <description>Periodic approvals arise when the next budget period becomes active and the users requests for budget allocated for new bedget period</description>
        <label>Periodic/BP Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>PriorApproval</fullName>
        <active>false</active>
        <label>Prior Approval</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>GeneralShare__c</fullName>
        <label>General Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OwnerReplacement__c</fullName>
        <label>Owner Replacement</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharingforReviewandApproval__c</fullName>
        <label>Sharing for Review and Approval</label>
    </sharingReasons>
    <validationRules>
        <fullName>AtleastOneChangeisNeeded</fullName>
        <active>false</active>
        <description>Please check any of these fields:Cost Increase,Grant award extension, Cost Increase, Scope of Work Change, Key Contact Change and Other Change for Amendment Preparation.</description>
        <errorConditionFormula>AND(GrantAwardExtension__c = False,  CostIncrease__c = False,  ScopeofWorkChange__c = False,  KeyContactChange__c = False,  OtherChange__c = False, TEXT(Status__c) = &apos;Created&apos;)</errorConditionFormula>
        <errorMessage>Please check any of these fields:Cost Increase,Grant award extension, Cost Increase, Scope of Work Change, Key Contact Change and Other Change for Amendment Preparation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfCostIncreaseEnterIncreaseAmount</fullName>
        <active>true</active>
        <description>If Cost Increase is checked, enter Cost Increase Amount.</description>
        <errorConditionFormula>AND(  CostIncrease__c = TRUE, ISBLANK(  Requested_Change_In_Budget__c ) )</errorConditionFormula>
        <errorMessage>Please Enter Cost Increase Amount if Cost Increase is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfGrantAwardExtensionEnterNewEndDate</fullName>
        <active>true</active>
        <description>If Grant Award Extension is checked, please Enter New End Date</description>
        <errorConditionFormula>AND(  GrantAwardExtension__c = TRUE, ISBLANK(  NewEndDate__c ) )</errorConditionFormula>
        <errorMessage>Please Enter New End Date if Grant Award Extension is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfOtherChangeEnterOtherDescription</fullName>
        <active>true</active>
        <description>If &apos;Other Change&apos; is checked, please enter &apos;Other Change Description&apos;.</description>
        <errorConditionFormula>AND(  OtherChange__c = TRUE, ISBLANK(  OtherChangeDescription__c ) )</errorConditionFormula>
        <errorMessage>Please enter &apos;Other Change Description&apos;, if &apos;Other Change&apos; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IfScopeOfWorkChangeEnterNewScope</fullName>
        <active>true</active>
        <description>If &apos;Scope of Work Change&apos; is checked, enter new scope of work.</description>
        <errorConditionFormula>AND(  ScopeofWorkChange__c = TRUE, ISBLANK(  ScopeofWorkChangeDescription__c ) )</errorConditionFormula>
        <errorMessage>Please Enter New Scope ,if Scope of Work Change is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NewBudgetPeriodEndDateIsEmpty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NoCostExtension__c==TRUE, ISBLANK(NewBudgetPeriodEndDate__c))</errorConditionFormula>
        <errorMessage>Please enter new budget period end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoCostExtensionBudgetCategoryChange</fullName>
        <active>true</active>
        <description>User cannot change both No Cost Extention and Change Budget Categories</description>
        <errorConditionFormula>AND(NoCostExtension__c==TRUE ,BudgetPeriodExtension__c==TRUE)</errorConditionFormula>
        <errorMessage>No cost extension and Budget categories cannot be changed at the same time. Please select either of one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestTypeRequired</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(RequestType__c, &quot;&quot; )</errorConditionFormula>
        <errorMessage>Request Type is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyBudgetEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
  AND( 
    NOT(ISNULL(ProposedBudgetEndDate__c)), 
    NOT(ISNULL(ProposedProjectEndDate__c))
  ), 
  ProposedBudgetEndDate__c &gt; ProposedProjectEndDate__c,
  false
)</errorConditionFormula>
        <errorMessage>The budget period end date cannot be later than the project end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyCostBudgetValidation</fullName>
        <active>true</active>
        <description>This validation rule validates that only either one among the following three are checked No Cost Extension, Cost Change Only and Cost and Budget Period Change. (API Names:
NoCostExtension__c,BudgetPeriodExtension__c,BudgetPeriodChange__c)</description>
        <errorConditionFormula>OR(
   AND(
      NoCostExtension__c=TRUE,
      BudgetPeriodExtension__c=TRUE,
      BudgetPeriodChange__c=TRUE 
     ),
   AND(
      NoCostExtension__c=TRUE,
      BudgetPeriodExtension__c=TRUE 
     ),
   AND(
      BudgetPeriodExtension__c=TRUE,
      BudgetPeriodChange__c=TRUE  
     ),
   AND(
      NoCostExtension__c=TRUE,
      BudgetPeriodChange__c=TRUE  
     )
)</errorConditionFormula>
        <errorMessage>Please check only ONE of the following: No Cost Extension or Cost Change Only or Cost and Budget Period Change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyEndDate2</fullName>
        <active>true</active>
        <description>The project period end date cannot occur before the project period end date.</description>
        <errorConditionFormula>IF(
  NOT(ISNULL(ProposedProjectEndDate__c)),
  ProposedProjectEndDate__c &lt; AwardedProjectPeriodEndDate__c, 
  false
)</errorConditionFormula>
        <errorMessage>The proposed project end date should be later than the current project period end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyEndDate3</fullName>
        <active>true</active>
        <errorConditionFormula>ProposedBudgetEndDate__c &lt; AwardedBudgetPeriodEndDate__c</errorConditionFormula>
        <errorMessage>The proposed budget period end date should be later than the current budget period end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VerifyImpact</fullName>
        <active>true</active>
        <description>This filed will let the reviewer know, to determine the impact in case if the Amendment Request is not approved.</description>
        <errorConditionFormula>ISBLANK( Impact__c )</errorConditionFormula>
        <errorMessage>Impact filed cannot be left blank</errorMessage>
    </validationRules>
</CustomObject>